Fixed spacing

--- a/client/src/components/UserAccounts/Requirement/Requirement.module.scss
+++ b/client/src/components/UserAccounts/Requirement/Requirement.module.scss
@@ -12,8 +12,10 @@
 
 .invalid{
     color:red;
+    margin: 0;
 }
 
 .valid{
     color:green;
+    margin: 0;
 }
